--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   responsive_builder: ^0.7.0
   get_it: ^7.6.4
+  animated_text_kit: ^4.2.2
+  percent_indicator: ^4.2.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
