--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   percent_indicator: ^4.2.3
   http: ^1.1.0
+  syncfusion_flutter_pdf: ^23.1.38
 
 dev_dependencies:
   flutter_test:
