--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.0-218.0.dev <4.0.0'
+  sdk: '>=3.1.0-218.0.dev <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   percent_indicator: ^4.2.3
   http: ^1.1.0
+  syncfusion_flutter_pdf:
 
 dev_dependencies:
   flutter_test:
