Add existing employees route

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   percent_indicator: ^4.2.3
   http: ^1.1.0
   syncfusion_flutter_pdf:
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
